Fix(app): records and record report
